hw_unique_key: Refactor the HUK_HAS_* macros
For Zephyr, use CONFIG_HAS_HW_NRF_* configs instead of devicetree.
This because the devicetree check doesn't work for nonsecure
applications.
Move to #ifdef HUK_HAS_* instead #if HUK_HAS_* because of the above
change.

Ref: NCSDK-9034

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -56,7 +56,7 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: v2.6.0-ncs1-rc3
+      revision: pull/562/head
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
