--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -29,7 +29,9 @@ add_subdirectory_ifdef(CONFIG_SUPL_CLIENT_LIB supl)
 add_subdirectory_ifdef(CONFIG_DATE_TIME date_time)
 add_subdirectory_ifdef(CONFIG_EDGE_IMPULSE edge_impulse)
 add_subdirectory_ifdef(CONFIG_WAVE_GEN_LIB wave_gen)
-add_subdirectory_ifdef(CONFIG_HW_UNIQUE_KEY hw_unique_key)
+if (DEFINED CONFIG_HW_UNIQUE_KEY OR DEFINED CONFIG_HW_UNIQUE_KEY_LOAD)
+  add_subdirectory(hw_unique_key)
+endif()
 add_subdirectory_ifdef(CONFIG_MODEM_JWT modem_jwt)
 add_subdirectory_ifdef(CONFIG_MODEM_ATTEST_TOKEN modem_attest_token)
 add_subdirectory_ifdef(CONFIG_MULTICELL_LOCATION multicell_location)
