--- a/lib/hw_unique_key/Kconfig
+++ b/lib/hw_unique_key/Kconfig
@@ -4,6 +4,15 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+config HW_UNIQUE_KEY_LOAD
+	bool "Load Hardware Unique key on boot"
+	depends on HAS_HW_NRF_ACL
+	depends on HAS_HW_NRF_CC310
+	depends on NRF_CC3XX_PLATFORM
+	select FPROTECT if HAS_HW_NRF_ACL
+	imply FPROTECT_ENABLE_NO_ACCESS if HAS_HW_NRF_ACL
+	imply NRFX_NVMC if HAS_HW_NRF_ACL
+
 config HW_UNIQUE_KEY
 	bool "Hardware Unique Keys (HUK)"
 	depends on HAS_HW_NRF_CC310 || HAS_HW_NRF_CC312
