west.yml: mcuboot: Change slot alignment to avoid problems in some cases
We cannot align on both end and start, so to ensure that the start
of primary, start of secondary and end of secondary are all aligned,
we now use the new 'align_next' partition manager directive.

Ref: NCSDK-10209

Signed-off-by: Øyvind Rønningstad <oyvind.ronningstad@nordicsemi.no>

--- a/west.yml
+++ b/west.yml
@@ -109,7 +109,7 @@ manifest:
     # changes.
     - name: mcuboot
       repo-path: sdk-mcuboot
-      revision: 9afbc97d02a33d587fdc258895822a1d00f6d065
+      revision: pull/158/head
       path: bootloader/mcuboot
     - name: nrfxlib
       repo-path: sdk-nrfxlib
