--- a/modules/trusted-firmware-m/Kconfig
+++ b/modules/trusted-firmware-m/Kconfig
@@ -65,7 +65,9 @@ config PM_PARTITION_SIZE_BL2
 config PM_PARTITION_SIZE_TFM
 	hex
 	prompt  "Memory reserved for TFM" if !TFM_MINIMAL
+	default 0x7E00 if TFM_MINIMAL && BOOTLOADER_MCUBOOT
 	default 0x8000 if TFM_MINIMAL
+	default 0x3FE00 if BOOTLOADER_MCUBOOT
 	default 0x40000
 	help
 	  Memory set aside for the TFM partition. This size is fixed if
